2008-09-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-psd/psd-save.c: applied patch from Dennis Ranke as
	attached to bug #551231. Changes the PSD save plug-in to store
	transparency data in the image data section. Also fixes bug #551232
	(saving an indexed image with multiple layers as PSD modifies the
	image).

2008-09-08  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpbrushcore.c: based on a patch from David Gowers
	clamp the brush scale so that the brush never becomes smaller than
	0.5 pixels. Fixes bug #548631.

2008-09-08  Michael Natterer  <mitch@gimp.org>

	Bug 551306 – Color picker for text tool does not show selected
	palette

	* app/tools/gimptexttool.c (gimp_text_tool_register): add
	GIMP_CONTEXT_PALETTE_MASK to the tool option's context mask so the
	color popup's palette follows the globally selected palette.

2008-09-08  Sven Neumann  <sven@gimp.org>

	* authors.xml: restored alphabetic order. Use real name instead of
	a nick.

	* AUTHORS: regenerated.

	* app/dialogs/authors.xsl: changed rule to only include
	contributors from the 2.6 development cycle in the About dialog.

2008-09-08  Roman Joost  <romanofski@gimp.org>

	* authors.xml: updated documenters who contributed to the user
	manual since 2.4

2008-09-07  Sven Neumann  <sven@gimp.org>

	Applied 'gimp-decimate.diff' as announced on the mailing-list:

	* app/gimp-log.[ch]: added log domain "scale".

	* app/paint-funcs/scale-region.c: replaced decimation routines
	with box filters. Only use the decimation routines to pre-scale
	the image, always apply the interpolation for the final step.

2008-09-07  Martin Nordholts  <martinn@svn.gnome.org>

	* app/widgets/gimpnavigationview.c
	(gimp_navigation_view_set_marker): Invalidating the view renderer
	is just plain wrong, revert to redrawing the view. We will need to
	solve the flicker in some other way.

2008-09-07  Martin Nordholts  <martinn@svn.gnome.org>

	* plug-ins/common/file-raw.c (load_dialog): Set the allowed max