@@ -55,6 +55,7 @@ The following people have contributed code to GIMP:
  Misha Dynin
  Daniel Eddeland
  Daniel Egger
+ Ulf-D. Ehlert
  Morton Eriksen
  Larry Ewing
  Pedro Alonso Ferrer
@@ -172,6 +173,7 @@ The following people have contributed code to GIMP:
  Nils Philippsen
  Ari Pollak
  Raphaël Quinet
+ Dennis Ranke
  Tom Rathborne
  Jens Restemeier
  Maurits Rijk
